<resources>
    <string name="app_name">FragmentTutorial3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="save_to_textview">Save</string>
    <string name="go_back">Go Back</string>
</resources>